force-app/main/default/objects/Booking__c/fields/Actual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mileage__c</fullName>
    <label>Actual Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>