force-app/main/default/objects/Booking__c/fields/Booking_Duration__c.field-meta.xml
<CustomField>
    <fullName>Booking_Duration__c</fullName>
    <formula>End_Date_Time__c -  Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>