force-app/main/default/objects/Booking__c/fields/Coupen_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupen_Discount__c</fullName>
    <formula>Coupon_Code__r.Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupen Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>