force-app/main/default/objects/Booking__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Coupen Code is not valid</errorMessage>
        <filterItems>
            <field>Coupon_Code__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon_Code__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>