force-app/main/default/objects/Booking__c/fields/Deduction_Of_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Of_Deposit__c</fullName>
    <inlineHelpText>Deduction in case of damage</inlineHelpText>
    <label>Deduction Of Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>