force-app/main/default/objects/Booking__c/fields/Final_Booking_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Booking_Price__c</fullName>
    <description>This booking price is based on applying discount and adjustment</description>
    <label>Final Booking Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>