force-app/main/default/objects/Booking__c/fields/Post_Booking_Completion_Audit__c.field-meta.xml
<CustomField>
    <fullName>Post_Booking_Completion_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Booking Completion Audit</label>
    <type>Checkbox</type>
</CustomField>