force-app/main/default/objects/Booking__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <formula>Final_Booking_Price__c *  (VALUE($CustomMetadata.System_Thresholds__mdt.Security_Deposit_Percentage.Value__c) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>