force-app/main/default/objects/Booking__c/fields/Security_Refund_Completed__c.field-meta.xml
<CustomField>
    <fullName>Security_Refund_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Refund Completed</label>
    <type>Checkbox</type>
</CustomField>