force-app/main/default/objects/Booking__c/fields/Total_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment__c</fullName>
    <inlineHelpText>Adjustment transaction type</inlineHelpText>
    <label>Total Adjustment</label>
    <summarizedField>Payment_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Adjustment</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Transaction__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>