force-app/main/default/objects/Booking__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <inlineHelpText>Initial Payment or Partial Payment summary</inlineHelpText>
    <label>Total Paid Amount</label>
    <summarizedField>Payment_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Initial Payment, Partial Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Transaction__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>