force-app/main/default/objects/Booking__c/validationRules/Check_Booking_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Booking_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_Time__c &gt;  End_Date_Time__c</errorConditionFormula>
    <errorMessage>End Date is before the start date</errorMessage>
</ValidationRule>