force-app/main/default/objects/Booking__c/validationRules/Check_Cancellation_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cancellation_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Status__c,&quot;Cancelled&quot;) &amp;&amp;  Start_Date_Time__c &lt; now()</errorConditionFormula>
    <errorMessage>Cannot cancel booking after start date.</errorMessage>
</ValidationRule>