force-app/main/default/objects/Booking__c/validationRules/Check_Future_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Future_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(ischanged(Start_Date_Time__c) &amp;&amp; Start_Date_Time__c &lt;  NOW()) || (isnew() &amp;&amp; Start_Date_Time__c &lt;  NOW())</errorConditionFormula>
    <errorDisplayField>Start_Date_Time__c</errorDisplayField>
    <errorMessage>Start Date cannot be in the past</errorMessage>
</ValidationRule>