force-app/main/default/objects/Booking__c/validationRules/Check_Mandatory_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mandatory_Cancellation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Status__c,&quot;Cancelled&quot;) &amp;&amp;  ISBLANK( Cancellation_Reason__c )</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation reason is required when booking is cancelled.</errorMessage>
</ValidationRule>