force-app/main/default/objects/Booking__c/validationRules/Prevent_Coupon_Code_Change_if_Not_Pendin.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Coupon_Code_Change_if_Not_Pendin</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Coupon_Code__c ) &amp;&amp;  NOT(ISPICKVAL( Status__c ,&quot;Pending&quot;) )</errorConditionFormula>
    <errorDisplayField>Coupon_Code__c</errorDisplayField>
    <errorMessage>You cannot change the coupon code once the status is no longer pending</errorMessage>
</ValidationRule>